connected mysql using xampp and sqlyog

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,14 +11,23 @@ logging.level.com.test.webapp==info
 spring.mvc.format.date=yyyy-MM-dd
 
 #spring.datasource.url=jdbc:h2:mem:testdb
+
+
+
+#mysql setting
 spring.jpa.defer-datasource-initialization=true
 
-spring.datasource.url=jdbc:mysql://localhost:3306/todos
-spring.datasource.username=todos-user
-spring.datasource.password=dummytodos
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.username=test
+spring.datasource.password=1234
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
+
+
+
+
+
 
 #/connect todos-user@localhost:3306
 #docker run --detach 
