--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,15 +22,15 @@ spring.datasource.username=test
 spring.datasource.password=1234
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-<<<<<<< HEAD
-=======
-
->>>>>>> 4654323354dee1d37a0197ff0d850cdce8e10aa7
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 
 
+
+####################
+#logging.level.org.springframework=info
+#management.endpoints.web.exposure.include=*
 
 
 #/connect todos-user@localhost:3306
